# dx-heroes-demo

./: .env.example  .env.test  .gitignore  README.md
offers-sdk/: README.md  pyproject.toml
offers-sdk/offers_sdk/: cli.py  config.py
offers-sdk/offers_sdk/auth/: token_manager.py
offers-sdk/offers_sdk/client/: httpx_offers_client.py  sync_offers_client.py
offers-sdk/offers_sdk/exceptions/: __init__.py  api_error.py  product_already_found_error.py  product_not_found_error.py
offers-sdk/offers_sdk/http/: httpx_client.py
offers-sdk/offers_sdk/interfaces/: async_http_client.py  offers_client.py  sync_offers_client.py  token_manager.py
offers-sdk/offers_sdk/models/: auth_response.py  offer.py  product.py
offers-sdk/offers_sdk_applift/: __init__.py  cli.py  config.py
offers-sdk/offers_sdk_applift/auth/: __init__.py  token_manager.py
offers-sdk/offers_sdk_applift/client/: httpx_offers_client.py  sync_offers_client.py
offers-sdk/offers_sdk_applift/clients/: __init__.py  httpx_offers_client.py  sync_offers_client.py
offers-sdk/offers_sdk_applift/exceptions/: __init__.py  authentication_error.py  base_offer_sdk_error.py  exception_handler.py  product_already_found_error.py
offers-sdk/offers_sdk_applift/http/: __init__.py  httpx_client.py
offers-sdk/offers_sdk_applift/interfaces/: __init__.py  offers_client.py  sync_offers_client.py
offers-sdk/offers_sdk_applift/models/: __init__.py  register_product_request.py
offers-sdk/tests/: conftest.py  test_cli.py  test_httpx_client.py  test_sync_client.py
